--- a/space/templates/category.html
+++ b/space/templates/category.html
@@ -108,8 +108,8 @@
 
 
 <!------ Include the above in your HEAD tag ---------->
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<body style="font-size: 15px !important;">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <div class="container-fluid">
     <div class="container ">
         {% for product in products %}
@@ -186,6 +186,8 @@
         
     </div>
 </div>
+
+</body>
 <style>
     h3.h3{text-align:center;margin:1em;text-transform:capitalize;font-size:1.7em;}
     
