--- a/space/templates/homepage.html
+++ b/space/templates/homepage.html
@@ -128,12 +128,10 @@
         #bg{
             background: url(static/photos/start3.JPG);
             background-repeat: no-repeat;
-            background-attachment:fixed;
             background-size:cover;
             background-position: center;
             height: 100%;
             width: 100%;
-            z-index: 0 !important;
         }
         
     </style>
@@ -148,23 +146,22 @@
         
         
         <div class="jsil-content mdl-layout__content">
-            <a name="top"></a>
+            <a name="top" id="top"></a>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="bg">
                 </div>
-                <br>
-                <br>
-                <br>
-                <br>
+         
                 <div class="container">
-                    
-                    <h3 style="background-color:rgb(100, 53, 119);color: white" class="h3 list-group-item list-group-item-action">
-                        Sample Products
-                    </h3>
+               
                     
                     
                     <div class="row">
+                    
                         {% for product in products %}
                         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
                             <div class="product-grid">
                                 <div class="product-image">
                                     
