--- a/space/templates/base.html
+++ b/space/templates/base.html
@@ -1,5 +1,3 @@
-{% load bootstrap3 %}
-{% load bootstrap4 %}
 {% load static %}
 
 
@@ -18,21 +16,25 @@
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <!-- Page styles -->
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Pacifico" rel="stylesheet">
+  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="static/css/bootstrap-theme.min.css" type="text/css">
+
+  <link rel="stylesheet" href="static/stylesheetcss/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="static/stylesheetcss/css/bootstrap-grid.min.css" type="text/css">
+  <link rel="stylesheet" href="static/stylesheetcss/css/bootstrap-grid.css" type="text/css">
+  <link rel="stylesheet" href="static/stylesheetcss/css/bootstrap-reboot.css" type="text/css">
+  <link rel="stylesheet" href="static/stylesheetcss/css/bootstrap-reboot.min.css" type="text/css">
+
+  <!-- scripts -->
+  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/scriptjs/js/bootstrap.min.js"></script>
+
  
-  <script src="{% static 'js/scripts.js' %}"></script>
 
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <title> JSIL </title>
 
   {% block styles %}
-    {% bootstrap_css %}
+  
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
   {% endblock %}
 
@@ -49,7 +51,6 @@
   {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  {% bootstrap_javascript %}
   {% endblock %}
 
 </body>
