--- a/space/templates/category.html
+++ b/space/templates/category.html
@@ -113,7 +113,7 @@
 <div class="container-fluid">
     <div class="container ">
         {% for product in products %}
-        <h3 style="background-color:rgb(94, 45, 114);color: white" class="h3 list-group-item list-n">
+        <h3 style="background-color:rgb(94, 45, 114);color: white;font-family: 'Josefin Sans', sans-serif;" class="h3 list-group-item list-n">
             
             {{product.category}}
             
