--- a/space/templates/homepage.html
+++ b/space/templates/homepage.html
@@ -190,7 +190,7 @@
                 </div>
                 
             </div>
-            <div class="container-fluid" style="background-color:rgb(100, 53, 119);text-align:center;height:350px;padding-top:50px;color:white;">
+            <div class="container-fluid" style="background-color:rgb(100, 53, 119);text-align:center;height:460px;padding-top:80px;color:white;">
                 <div class="jsil-wear-section">
                     <div class="jsil-wear-band">
                         <div class="jsil-wear-band-text" style="margin-top:40px !important;">
@@ -219,7 +219,7 @@
                     <div class="jsil-card-container mdl-grid">
                         <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
                             <div class="mdl-card__title">
-                                <h4 class="mdl-card__title-text" style="font-weight:500;color: rgb(211, 71, 94) ;">Mission</h4>
+                                <h4 class="mdl-card__title-text" style="font-weight:500;color: rgb(211, 71, 94) ;font-family: 'Josefin Sans', sans-serif;">Mission</h4>
                             </div>
                             <div class="mdl-card__supporting-text">
                                 <span class="mdl-typography--font-dark mdl-typography--subhead" style="font-family: 'Josefin Sans', sans-serif !important;font-weight: bold;color:black;">To
@@ -265,8 +265,8 @@
                                     
                                 </div>
                                 <div class="jsil-customized-section-text">
-                                    <div class="container" style="width:300px;">
-                                        <h3 style="background-color:rgb(100, 53, 119);color: white;padding-left:50px;" class="h3 list-group-item list-group-item-action">
+                                    <div class="container" style="width:400px;">
+                                        <h3 style="background-color:rgb(100, 53, 119);color: white;width:400px;" class="h3 list-group-item list-group-item-action">
                                             Payment Information
                                         </h3>
                                     </div>
@@ -289,8 +289,8 @@
                                     <div class="mdl-mega-footer__middle-section" style="color:whitesmoke !important;">
                                         
                                         <div class="mdl-mega-footer__drop-down-section">
-                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;">Contacts</h1>
+                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked="">
+                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;font-family: 'Josefin Sans', sans-serif;">Contacts</h1>
                                             <ul class="mdl-mega-footer__link-list">
                                                 <li><a href="https://www.facebook.com/jsilspacesavers/"><i class="fab fa-facebook"></i>&nbsp; Facebook</a></li>
                                                 <li style="padding-top:10px;"><i class="fas fa-phone"></i>&nbsp;+254731 369816 </li>
@@ -299,8 +299,8 @@
                                         </div>
                                         
                                         <div class="mdl-mega-footer__drop-down-section">
-                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;">Products</h1>
+                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked="">
+                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;font-family: 'Josefin Sans', sans-serif;">Products</h1>
                                             <ul class="mdl-mega-footer__link-list">
                                                 <li><a href="/category/1">Over the door shoe racks</a></li>
                                                 <li><a href="/category/2">Class room organizers</a></li>
@@ -316,22 +316,22 @@
                                         </div>
                                         
                                         <div class="mdl-mega-footer__drop-down-section">
-                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;">Business Location</h1>
+                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked="">
+                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;font-family: 'Josefin Sans', sans-serif;">Business Location</h1>
                                             <ul class="mdl-mega-footer__link-list">
                                                 <li><a href="https://www.google.com/maps/place/Popo+Rd,+Nairobi/@-1.3221633,36.8313735,17z/data=!3m1!4b1!4m5!3m4!1s0x182f11b0e16f5815:0x9752b48271994ba7!8m2!3d-1.3221687!4d36.8335675" target="__blank"><i class="fas fa-map-marker-alt"></i>&nbsp; Syokimau Wanaanchi Road</a></li>
                                                 <li style="padding-top:10px;"><i class="fas fa-building"></i>&nbsp; Nairobi, Kenya </li>
                                             </ul>
-                                            <div class="mapouter"><div class="gmap_canvas"><iframe width="299" height="213" id="gmap_canvas" src="https://maps.google.com/maps?q=syokimau%20mwananchi%20road%20nairobi&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">google maps for web</a></div><style>.mapouter{position:relative;text-align:right;height:213px;width:299px;}.gmap_canvas {overflow:hidden;background:none!important;height:213px;width:299px;}</style></div>
+                                            <div class="mapouter"><div class="gmap_canvas"><iframe width="299" height="213" id="gmap_canvas" src="https://maps.google.com/maps?q=syokimau%20mwananchi%20road%20nairobi&amp;t=k&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">google maps for web</a></div><style>.mapouter{position:relative;text-align:right;height:213px;width:299px;}.gmap_canvas {overflow:hidden;background:none!important;height:213px;width:299px;}</style></div>
                                             
                                         </div>
                                         
                                         <div class="mdl-mega-footer__drop-down-section">
-                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;">Payment Mode</h1>
+                                            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked="">
+                                            <h1 class="mdl-mega-footer__heading" style="font-size:18px !important;font-family: 'Josefin Sans', sans-serif;">Payment Mode</h1>
                                             <ul class="mdl-mega-footer__link-list">
                                                 <li><a href="https://www.google.com/maps/place/Popo+Rd,+Nairobi/@-1.3221633,36.8313735,17z/data=!3m1!4b1!4m5!3m4!1s0x182f11b0e16f5815:0x9752b48271994ba7!8m2!3d-1.3221687!4d36.8335675" target="__blank"></a></li>
-                                                <h5>Lipa na Mpesa Paybill <br></h5> 
+                                                <h5 style="font-family: 'Josefin Sans', sans-serif;">Lipa na Mpesa Paybill <br></h5> 
                                                 <li>Business Number: <b>400222</b><br></li> 
                                                 <li>Account Number: <b>506670#Customer Name</b></li>
                                             </ul>
