--- a/space/templates/navbar.html
+++ b/space/templates/navbar.html
@@ -98,8 +98,7 @@
                                                     <a href="about.html"><span class="mdl-navigation__link" style="font-size: 17px;text-decoration-line: none !important;">About
                                                         Us</span></a>
                                                         <div class="jsil-drawer-separator"></div>
-                                                        <a href=""><span class="mdl-navigation__link" style="font-size: 17px;text-decoration-line: none !important;"
-                                                            href="contact.html">Contacts</span></a>
+                                                        <a href="contact.html"><span class="mdl-navigation__link" style="font-size: 17px;text-decoration-line: none !important;">Contacts</span></a>
                                                             <div class="jsil-drawer-separator"></div>
                                                           
                                                             
